# kluky_mcp

./: .env.example  .env1  .gitignore  AGENTS.md  KLUKY_OSOBNOST_A_KONFIGURACIA.md  README.md  UC0_DOKUMENTACIA_PRE_POUZIVATELA.md  UC1_DOKUMENTACIA_PRE_POUZIVATELA.md  UC2_DOKUMENTACIA_PRE_POUZIVATELA.md  UC3_DOKUMENTACIA_PRE_POUZIVATELA.md  evaluation.xml  main.py  notes.txt  opencode.json  opencode.json.bak  pyproject.toml  test-opencode.ps1
.github/workflows/: gif_on_commit.yml
.opencode/agents/: bike.md  operator.md
.opencode/skills/documentation-lookup/: SKILL.md
.opencode/skills/esp32-management/: SKILL.md
.opencode/skills/led-control/: SKILL.md
.opencode/skills/service-records/: SKILL.md
.opencode/skills/tool-lending/: SKILL.md
.opencode/skills/tool-location/: SKILL.md
logs/: Copy of Oprava bicykla s kavovarom.pdf_20260313_183748.json  Copy of Oprava bicykla s kavovarom.pdf_20260313_183843.json  Copy of Oprava bicykla s kavovarom.pdf_20260313_183909.json  Copy of Oprava bicykla s kavovarom.pdf_20260313_184023.json  Copy of Oprava bicykla s kavovarom.pdf_20260313_184135.json  Copy of Oprava bicykla s kavovarom.pdf_20260313_184234.json  Copy of Oprava bicykla s kavovarom.pdf_20260313_184255.json  Copy of Oprava bicykla s kavovarom.pdf_20260313_184623.json  Copy of Oprava bicykla s kavovarom.pdf_20260313_202053.json  Copy of Oprava bicykla s kavovarom.pdf_20260319_170009.json  Oprava bicykla s kavovarom.pdf_20260313_202003.json  Oprava bicykla s motorovou pilou.pdf_20260313_202003.json  Oprava bicykla s motorovou pilou.pdf_20260319_170004.json  diagnostika_kola.pdf_20260313_202022.json  diagnostika_kola.pdf_20260319_171504.json  manual_prevodovka.pdf_20260312_092513.json  manual_prevodovka.pdf_20260313_202039.json  manual_servis_brzdy.pdf_20260313_202046.json  manual_servis_brzdy.pdf_20260319_174004.json
src/kluky_mcp/: __init__.py  api_client.py  constants.py  db.py  formatters.py  models.py  pg_connection.py  server.py  settings.py
src/kluky_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/kluky_mcp/tools/: __init__.py  esp32_map.json  health.py  led_flag.json  uc0.py  uc1.py  uc2.py  uc3.py
src/kluky_mcp/tools/uc02_utils/: pageIndexPipeline.py  pageIndexRetrieval.py  (+1 more)
tests/: test_db.py  test_health.py  test_server.py  test_uc0.py  test_uc1_tools.py  test_uc2_documents.py  test_uc3_records.py
tools/: health.py  uc1.py  uc2.py  uc3.py
