[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kluky-mcp"
version = "0.1.0"
description = "Blueprint-compliant MCP shell server for the Kluky team."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.0.1",
    "httpx>=0.27.0",
    "pydantic>=2.10.6",
    "psycopg2-binary>=2.9.9",
    "markitdown>=0.1.5",
    "pageindex",
    "pytest>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.11.0",
    "ruff>=0.14.5",
    "ty>=0.0.1a27",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
kluky-mcp = "kluky_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "C",
    "B",
    "G",
    "SIM1",
    "PLE",
    "N802",
    "N803",
    "N815",
    "N816",
    "N806",
    "ANN",
    "C901",
    "UP",
    "PLR0915",
]
ignore = [
    "E501",
    "B008",
    "C901",
    "G004",
    "ANN003",
    "B904",
    "G201",
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

fixable = [
    "A",
    "B",
    "C",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
unfixable = []

[tool.ruff.lint.pylint]
max-statements = 60

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "fastmcp", "httpx", "pydantic", "starlette"]

[tool.uv.sources]
pageindex = { git = "https://github.com/xovsonka/PageIndexKluky.git" }
